Brought in Symfony console component and changed app accordingly.  Temporarily took out database usage.  Added single word capability.

--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
         }, 
 
         "files": [
-            "library/lib.php",
-            "library/helpers.php"
+            "src/Library/lib.php",
+            "src/Library/helpers.php"
         ]
     },
     "require": {
-        
+        "symfony/console": "~2.0"
     }
 }
