--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "symfony/console": "~2.0"
+        "symfony/console": "~2.0",
+        "phpunit/phpunit": "~4.0"
     },
 
     "autoload": {
@@ -10,6 +11,13 @@
 
         "files": [
             "src/Transcribe/conversions.php"
+        ]
+    },
+
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php",
+            "tests/ExpectedResults.php"
         ]
     }
 }
