Started syllable class. Put patterns and exceptions into arrays.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         }, 
 
         "files": [
-            "src/Transcribe/conversions.php"
+            "src/Transcribe/conversions.php",
+            "src/Syllabize/patterns.php"
         ]
     },
 
