--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "zachleigh/pronounce-php",
     "type": "project",
-    "description": "Create English pronunciation strings for over 130,000 words",
-    "keywords": ["cmudict","pronounce","pronunciation",",hyphenate","hyphenation","arpabet","ipa","spelling"],
+    "description": "Create English pronunciation strings for over 130,000 words.  Hyphenate English words.",
+    "keywords": ["cmudict","pronounce","pronunciation",",hyphenate","hyphenation","arpabet","ipa","spelling","English","dictionary"],
     "homepage": "https://github.com/zachleigh/pronounce-php",
     "license": "GPL-2.0",
     "authors": [
@@ -33,7 +33,8 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php",
-            "tests/ExpectedResults.php"
+            "tests/LookupExpectedResults.php",
+            "tests/HyphenateExpectedResults.php"
         ]
     }
 }
