--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "zachleigh/pronounce-php",
     "type": "project",
     "description": "Create English pronunciation strings for over 130,000 words.  Hyphenate English words.",
-    "keywords": ["cmudict","pronounce","pronunciation",",hyphenate","hyphenation","arpabet","ipa","spelling","English","dictionary"],
+    "keywords": ["cmudict","pronounce","pronunciation","hyphenate","hyphenation","arpabet","ipa","spelling","English","dictionary"],
     "homepage": "https://github.com/zachleigh/pronounce-php",
     "license": "GPL-2.0",
     "authors": [
