--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "symfony/console": "~2.0",
         "symfony/filesystem": "~2.0",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "vlucas/phpdotenv": "^2.0"
     },
 
     "autoload": {
