Updated readme. Improved hyphenation database insertion.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 
         "files": [
             "src/Transcribe/conversions.php",
-            "src/Hyphenate/patterns.php"
+            "src/Hyphenate/patterns.php",
+            "src/Build/helpers.php"
         ]
     },
 
